Checkpoint 2 - fixed column collapse
too much padding was pushing certification down

--- a/10LessonTen/Checkpoint2/css/style.css
+++ b/10LessonTen/Checkpoint2/css/style.css
@@ -84,16 +84,16 @@ h3 {
 
 .technician {
   height: 200px;
-  width: 500px;
+  width: 400px;
   float: left;
   padding: 80px 80px 0 300px;
 }
 
 .luthier {
   height: 200px;
-  width: 500px;
+  width: 400px;
   float: left;
-  padding: 30px 75px 0 0;
+  padding: 30px 50px 0 100px;
 }
 
 .luthier img {
@@ -102,7 +102,7 @@ h3 {
 
 .clearfix:after {
   content: "";
-  display:block;
+  display: block;
   clear: both;
 }
 
